# i18n-md-email-templates

./: CHANGELOG.md  Cargo.toml  README.md
src/: catalog.rs  lib.rs  render.rs  tests.rs
